opam-version: "1.2"
name: "github-jsoo"
version: "3.0.0"
maintainer: "sheets@alum.mit.edu"
authors: [
  "Anil Madhavapeddy"
  "David Sheets"
  "Andy Ray"
  "Jeff Hammerbacher"
  "Thomas Gazagnaire"
  "Rudi Grinberg"
  "Qi Li"
  "Jeremy Yallop"
  "Dave Tucker"
]
homepage: "https://github.com/mirage/ocaml-github"
bug-reports: "https://github.com/mirage/ocaml-github/issues"
dev-repo: "https://github.com/mirage/ocaml-github.git"
tags: [
  "org:mirage"
  "org:xapi-project"
  "git"
]
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [
  ["jbuilder" "runtest" "-p" name]
]
depends: [
  "jbuilder" {build & >= "1.0+beta10"}
  "cohttp" {>= "0.17.0"}
  "js_of_ocaml"
  "github"
]
available: [ ocaml-version >= "4.02.3" ]
