opam-version: "1.2"
name: "github-unix"
version: "3.0.0"
maintainer: "sheets@alum.mit.edu"
authors: [
  "Anil Madhavapeddy"
  "David Sheets"
  "Andy Ray"
  "Jeff Hammerbacher"
  "Thomas Gazagnaire"
  "Rudi Grinberg"
  "Qi Li"
  "Jeremy Yallop"
  "Dave Tucker"
]
homepage: "https://github.com/mirage/ocaml-github"
bug-reports: "https://github.com/mirage/ocaml-github/issues"
dev-repo: "https://github.com/mirage/ocaml-github.git"
tags: [
  "org:mirage"
  "org:xapi-project"
  "git"
]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build}
  "github"
  "tls"
  "stringext"
  "lambda-term"
  "cmdliner" {>= "0.9.8"}
  "base-unix"
]
available: [ ocaml-version >= "4.02.3" ]
