opam-version: "1.2"
maintainer: "anil@recoil.org"
authors: [
  "Anil Madhavapeddy"
  "David Sheets"
  "Andy Ray"
  "Jeff Hammerbacher"
  "Thomas Gazagnaire"
  "Rudi Grinberg"
  "Qi Li"
  "Jeremy Yallop"
  "Dave Tucker"
]
homepage:    "https://github.com/mirage/ocaml-github"
bug-reports: "https://github.com/mirage/ocaml-github/issues"
dev-repo:    "https://github.com/mirage/ocaml-github.git"
doc:         "https://mirage.github.io/ocaml-github/"

tags: [
  "org:mirage"
  "org:xapi-project"
  "git"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name]
]
depends: [
  "dune" {build}
  "github"
  "cohttp-lwt-unix"
  "stringext"
  "lambda-term"
  "cmdliner" {>= "0.9.8"}
  "base-unix"
]
available: [ ocaml-version >= "4.03.0" ]
