opam-version: "1.2"
name: "github"
version: "2.3.0"
maintainer: "sheets@alum.mit.edu"
authors: [
  "Anil Madhavapeddy"
  "David Sheets"
  "Andy Ray"
  "Jeff Hammerbacher"
  "Thomas Gazagnaire"
  "Rudi Grinberg"
  "Qi Li"
  "Jeremy Yallop"
  "Dave Tucker"
]
homepage: "https://github.com/mirage/ocaml-github"
bug-reports: "https://github.com/mirage/ocaml-github/issues"
dev-repo: "https://github.com/mirage/ocaml-github.git"
tags: [
  "org:mirage"
  "org:xapi-project"
  "git"
]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build}
  "uri" {>= "1.9.0"}
  "cohttp" {>= "0.17.0"}
  "lwt" {>= "2.4.4"}
  "atdgen" {>= "1.10.0"}
  "yojson" {>= "1.2.0"}
  "stringext"
]
available: [ ocaml-version >= "4.02.3" ]
