opam-version: "1.2"
maintainer: "anil@recoil.org"
authors: [
  "Anil Madhavapeddy"
  "David Sheets"
  "Andy Ray"
  "Jeff Hammerbacher"
  "Thomas Gazagnaire"
  "Rudi Grinberg"
  "Qi Li"
  "Jeremy Yallop"
  "Dave Tucker"
]
homepage:    "https://github.com/mirage/ocaml-github"
bug-reports: "https://github.com/mirage/ocaml-github/issues"
dev-repo:    "https://github.com/mirage/ocaml-github.git"
doc:         "https://mirage.github.io/ocaml-github/"

tags: [
  "org:mirage"
  "org:xapi-project"
  "git"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name]
]
depends: [
  "dune" {build}
  "uri" {>= "1.9.0"}
  "cohttp" {>= "0.99.0"}
  "cohttp-lwt" {>= "0.99"}
  "lwt" {>= "2.4.4"}
  "atdgen" {>= "2.0.0"}
  "yojson" {>= "1.2.0"}
  "stringext"
]
available: [ ocaml-version >= "4.03.0" ]
