(rule
 (targets github_t.ml github_t.mli)
  (deps    github.atd)
  (action  (run atdgen -t %{deps})))

(rule
 (targets github_j.ml github_j.mli)
  (deps    github.atd)
  (action  (run atdgen -j -j-std %{deps})))


(library
 (name github)
  (public_name github)
  (wrapped false)
  (modules_without_implementation github_s)
  (flags (:standard -principal -strict-sequence -g -safe-string
                    -w "A-E-41-42-44-48" ))
  (modules github_s github_core github_json github_j github_t)
  (libraries cohttp uri cohttp-lwt yojson atdgen))
