(executables
 (libraries cohttp-lwt-unix github_unix atdgen stringext cmdliner)
  (names 
   current_user
   current_user_orgs
   organizations
   organization_repos
    rwo
    get_token
    repo_info
    repo_stats
    contributors
    user_type))

(rule (copy config.ml.in config.ml))

(alias
 (name DEFAULT)
  (deps
   current_user.exe
   current_user_orgs.exe
   organizations.exe
   organization_repos.exe
    rwo.exe
    get_token.exe
    repo_info.exe
    repo_stats.exe
    contributors.exe
    user_type.exe))
